# higra-pump-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  package.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/src/hpe/: __init__.py  cli.py  constants.py  sdk.py  units.py
backend/src/hpe/api/: __init__.py  app.py  auth.py  main.py  middleware.py  volute_endpoint.py  websocket.py
backend/src/hpe/cfd/: __init__.py  adjoint_loop.py  cfx_package.py  design_loop.py  doe.py  doe_runner.py  domain_extent.py  geo_validator.py  pcf_generator.py  pipeline.py  pump_curve.py  sweep.py  turbogrid_wrapper.py
backend/src/hpe/cli/: advanced_commands.py
backend/src/hpe/core/: __init__.py  config.py  db_models.py  enums.py  logging_config.py  models.py  persistence.py  project_file.py  udp.py
backend/src/hpe/data/: bancada_etl.py  bancada_seed.py  feature_store.py  training_log.py
backend/src/hpe/db/: __init__.py  connection.py  migrate.py  repositories.py  schema.sql
backend/src/hpe/geometry/: __init__.py  export.py  parametric.py  storage.py
backend/src/hpe/infra/: devops_tools.py
backend/src/hpe/io/: __init__.py  ptd_reader.py  td1_perfdata.py
backend/src/hpe/optimization/: __init__.py  advanced_methods.py  bayesian.py  doe.py  enhancements.py  evaluator.py  nsga2.py  optimizer.py  problem.py  rrs.py  rsm.py  surrogate_opt.py
backend/src/hpe/orchestrator/: __init__.py  celery_app.py  (+4 more)
backend/tests/: conftest.py  test_api.py  test_geometry.py  test_integration.py  test_sizing.py
backend/tests/ai/: test_anomaly.py  test_assistant.py
backend/tests/api/: test_endpoints.py
backend/tests/cfd/: conftest.py
backend/tests/e2e/: test_api_e2e.py
backend/tests/geometry/: conftest.py  test_blade.py  test_blade_modules.py  test_blockage.py  test_distributor.py  test_double_volute.py  test_impeller.py  test_lete.py  test_meridional_advanced.py  test_splitter.py  test_stacking.py
backend/tests/optimization/: conftest.py  test_bayesian.py  test_problem.py
backend/tests/physics/: conftest.py  test_compressible.py  test_curves.py  test_losses.py
backend/tests/sizing/: test_axial.py  test_design_db.py  test_efficiency.py  test_francis.py  test_meanline.py  test_multistage.py  test_specific_speed.py
backend/tests/validation/: test_benchmark.py
(+400 files in other folders)
