[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "higra-pump-engine"
version = "0.1.0"
description = "Platform for design, analysis and optimization of hydraulic turbomachinery"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    { name = "Jonathan", email = "jonathan@higra.com.br" },
]

dependencies = [
    # Core / Numeric
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",

    # Configuration
    "pydantic>=2.6",
    "pydantic-settings>=2.1",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Task Queue
    "celery[redis]>=5.3",

    # Object Storage
    "minio>=7.2",

    # Logging
    "structlog>=24.1",

    # PDF report generation (#18)
    "fpdf2>=2.7",

    # Optimization
    "deap>=1.4",

    # Database (psycopg2 pool)
    "psycopg2-binary>=2.9",

    # ML / Surrogate (needed at runtime — surrogate v1 XGBoost + v2 GP)
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",

    # Parquet support (bancada dataset + feature store)
    "pyarrow>=13.0",
]

[project.optional-dependencies]
geometry = [
    "cadquery>=2.4",
    # OpenCascade comes via cadquery
]

cfd = [
    # OpenFOAM and SU2 are system-level installs
    # This group contains Python helpers
    "meshio>=5.3",
]

ai = [
    "torch>=2.2",
    "mlflow>=2.11",
    # scikit-learn, xgboost, joblib, pyarrow are in core deps
]

optimization = [
    "deap>=1.4",
    "optuna>=3.5",
]

visualization = [
    "vtk>=9.3",
    "matplotlib>=3.8",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

all = [
    "higra-pump-engine[geometry,cfd,ai,optimization,visualization,dev]",
]

[project.scripts]
hpe = "hpe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hpe"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
